# SearchSolver

./: AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  CompareCost.h  DFS.h  FileCacheManager.h  ISearchable.h  Isearcher.h  MatrixProblem.h  MatrixSolverBestFS.h  MyClientHandler.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.h  PrioritySearcher.h  QueueSearcher.h  README.md  Server.h  Solver.h  StackSearcher.h  State.h  StringReverser.h  auto_client.py  log.txt  main.cpp  myParallelServer.cpp  myParallelServer.h  mySocket.h
